# python_motor_model

./: README.md  main.py  pyproject.toml
