[project]
name = "python-motor-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "control>=0.10.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "pytest>=9.1.1",
    "scipy>=1.18.0",
]
